[gd_scene load_steps=32 format=2]

[ext_resource path="res://asset/player/playe1b.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Player/PopLog.gd" type="Script" id=3]
[ext_resource path="res://asset/icons/dialogBox.png" type="Texture" id=4]
[ext_resource path="res://asset/icons/presse_icon1.png" type="Texture" id=5]
[ext_resource path="res://WorldMapAISrc/InteractionDetectionZone.tscn" type="PackedScene" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.83354
height = 2.32076

[sub_resource type="Animation" id=2]
resource_name = "IdleDown"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "IdleLeft"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=4]
resource_name = "IdleRight"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=5]
resource_name = "IdleUp"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}

[sub_resource type="Animation" id=6]
resource_name = "WalkDown"
length = 0.45
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=7]
resource_name = "WalkLeft"
length = 0.45
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5 ]
}

[sub_resource type="Animation" id=8]
resource_name = "WalkRight"
length = 0.45
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 6, 7, 8 ]
}

[sub_resource type="Animation" id=9]
resource_name = "WalkUp"
length = 0.45
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11 ]
}

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "IdleUp"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "IdleLeft"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "IdleRight"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "IdleDown"

[sub_resource type="AnimationNodeBlendSpace2D" id=14]
auto_triangles = false
blend_point_0/node = SubResource( 10 )
blend_point_0/pos = Vector2( 0, -1.1 )
blend_point_1/node = SubResource( 11 )
blend_point_1/pos = Vector2( -1, 0 )
blend_point_2/node = SubResource( 12 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 13 )
blend_point_3/pos = Vector2( 0, 1.1 )
triangles = PoolIntArray( 0, 1, 2, 1, 2, 3 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "WalkUp"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "WalkDown"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "WalkLeft"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "WalkRight"

[sub_resource type="AnimationNodeBlendSpace2D" id=19]
blend_point_0/node = SubResource( 15 )
blend_point_0/pos = Vector2( 0, -1.1 )
blend_point_1/node = SubResource( 16 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 17 )
blend_point_2/pos = Vector2( -1, 0 )
blend_point_3/node = SubResource( 18 )
blend_point_3/pos = Vector2( 1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachine" id=22]
states/Idle/node = SubResource( 14 )
states/Idle/position = Vector2( 436.523, 74 )
states/Walk/node = SubResource( 19 )
states/Walk/position = Vector2( 636.523, 74 )
transitions = [ "Idle", "Walk", SubResource( 20 ), "Walk", "Idle", SubResource( 21 ) ]
start_node = "Idle"
graph_offset = Vector2( -83.4775, 0 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=23]

[sub_resource type="Animation" id=24]
resource_name = "Interaction"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PresseIcon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="CircleShape2D" id=25]
radius = 14.4908

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 2147483649
script = ExtResource( 2 )

[node name="PlayerSprite" type="Sprite" parent="."]
position = Vector2( 1.01629, -7.07889 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
hframes = 12
__meta__ = {
"_edit_lock_": true
}

[node name="PlayerWorldCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0.0786438, 0.609526 )
rotation = 1.5708
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/IdleDown = SubResource( 2 )
anims/IdleLeft = SubResource( 3 )
anims/IdleRight = SubResource( 4 )
anims/IdleUp = SubResource( 5 )
anims/WalkDown = SubResource( 6 )
anims/WalkLeft = SubResource( 7 )
anims/WalkRight = SubResource( 8 )
anims/WalkUp = SubResource( 9 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 22 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 23 )
parameters/Idle/blend_position = Vector2( -0.00156742, 0.900862 )
parameters/Walk/blend_position = Vector2( -0.00156742, -0.417241 )

[node name="PopLog" type="NinePatchRect" parent="."]
visible = false
margin_left = -16.2678
margin_top = -97.7864
margin_right = 19.7322
margin_bottom = -53.7864
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 32, 32 )
patch_margin_left = 25
patch_margin_top = 19
patch_margin_right = 11
patch_margin_bottom = 25
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RefRect1" type="ReferenceRect" parent="PopLog"]
margin_left = 7.0
margin_top = 30.0
margin_right = 14.0
margin_bottom = 31.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PresseIcon" type="Sprite" parent="."]
position = Vector2( 0.218267, -37.2176 )
texture = ExtResource( 5 )
hframes = 5

[node name="InteractionAnimPlayer" type="AnimationPlayer" parent="."]
anims/Interaction = SubResource( 24 )

[node name="InteractionDetectionZone" parent="." instance=ExtResource( 6 )]
collision_mask = 32

[node name="CollisionShape2D" parent="InteractionDetectionZone" index="0"]
modulate = Color( 0, 1, 0, 0.470588 )
position = Vector2( 0.00524902, -3.25722 )
shape = SubResource( 25 )

[editable path="InteractionDetectionZone"]
